api-resources/default/a2d27c4d-a4a2-4125-8e49-bb3e7e814c46/1/default_a2d27c4d-a4a2-4125-8e49-bb3e7e814c46_v1_httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  creationTimestamp: null
  name: petstore
spec:
  hostnames:
  - example.com
  parentRefs:
  - name: external
    namespace: gateway-system
  rules:
  - matches:
    - method: POST
      path:
        type: Exact
        value: /cat
  - matches:
    - method: GET
      path:
        type: Exact
        value: /cat
  - matches:
    - method: GET
      path:
        type: Exact
        value: /dog
  - matches:
    - method: POST
      path:
        type: Exact
        value: /dog
